--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G19_list_impact_of_varying_parts.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G19_list_impact_of_varying_parts.yaml
@@ -1,8 +1,6 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: {{username}}
-password: {{password}}
+url: jdbc:postgresql://127.0.0.1:5433/yugabyte?user=yugabyte&password=yugabyte
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
@@ -223,7 +221,7 @@ microbenchmark:
                                 params: [100001, 500000]
                               - util: RandomAString
                                 params: [1, 20]
-                              - util: OneStringFromArray
+                              - util: SeqStringGenFromArray
                                 params: ['Sales','Engineering','HR','Finance','Anonymous']
                               - util: CyclicSeqDateGen
                                 params: [2001,2025]
@@ -271,7 +269,7 @@ microbenchmark:
                                 params: [100001, 500000]
                               - util: RandomAString
                                 params: [1, 20]
-                              - util: OneStringFromArray
+                              - util: SeqStringGenFromArray
                                 params: ['Sales']
                               - util: CyclicSeqDateGen
                                 params: [2001,2025]
@@ -319,7 +317,7 @@ microbenchmark:
                                 params: [100001, 500000]
                               - util: RandomAString
                                 params: [1, 20]
-                              - util: OneStringFromArray
+                              - util: SeqStringGenFromArray
                                 params: ['Sales','Engineering']
                               - util: CyclicSeqDateGen
                                 params: [2001,2025]
@@ -367,7 +365,7 @@ microbenchmark:
                                 params: [100001, 500000]
                               - util: RandomAString
                                 params: [1, 20]
-                              - util: OneStringFromArray
+                              - util: SeqStringGenFromArray
                                 params: ['Sales','Engineering','HR']
                               - util: CyclicSeqDateGen
                                 params: [2001,2025]
@@ -415,7 +413,7 @@ microbenchmark:
                                 params: [100001, 500000]
                               - util: RandomAString
                                 params: [1, 20]
-                              - util: OneStringFromArray
+                              - util: SeqStringGenFromArray
                                 params: ['Sales','Engineering','HR','Finance']
                               - util: CyclicSeqDateGen
                                 params: [2001,2025]
@@ -463,7 +461,7 @@ microbenchmark:
                                 params: [100001, 500000]
                               - util: RandomAString
                                 params: [1, 20]
-                              - util: OneStringFromArray
+                              - util: SeqStringGenFromArray
                                 params: ['Sales','Engineering','HR','Finance','Anonymous']
                               - util: CyclicSeqDateGen
                                 params: [2001,2025]
