--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG9_idx_type_on_increasing_row_range_scan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG9_idx_type_on_increasing_row_range_scan.yaml
@@ -40,7 +40,7 @@ microbenchmark:
                 columns:
                     - name: col_bigint_id_
                       count: 6
-                      util: PrimaryIntGen
+                      util: RandomUniqueIntGen
                       params: [ 1, 1000000 ]
                     - name: col_float2_
                       count: 2
