--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG8_sec_index_hash_tbl_hash_selects_indexscan_default.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG8_sec_index_hash_tbl_hash_selects_indexscan_default.yaml
@@ -21,17 +21,17 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - DROP TABLE IF EXISTS INDG8_hashtbl_comp_skey_1;
-            - CREATE TABLE INDG8_hashtbl_comp_skey_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_id_5 bigint, col_bigint_id_6 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1));
-            - CREATE INDEX ON INDG8_hashtbl_comp_skey_1(col_bigint_id_2 ASC, col_bigint_id_3 ASC);
-            - CREATE INDEX ON INDG8_hashtbl_comp_skey_1(col_bigint_id_4, col_bigint_id_5 ASC);
+            - DROP TABLE IF EXISTS INDG8_D_hashtbl_comp_skey_1;
+            - CREATE TABLE INDG8_D_hashtbl_comp_skey_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_id_4 bigint, col_bigint_id_5 bigint, col_bigint_id_6 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1));
+            - CREATE INDEX ON INDG8_D_hashtbl_comp_skey_1(col_bigint_id_2 ASC, col_bigint_id_3 ASC);
+            - CREATE INDEX ON INDG8_D_hashtbl_comp_skey_1(col_bigint_id_4, col_bigint_id_5 ASC);
 
         cleanup:
             - DROP TABLE IF EXISTS hashtbl_comp_skey_1;
 
         loadRules:
 
-              - table: INDG8_hashtbl_comp_skey_
+              - table: INDG8_D_hashtbl_comp_skey_
                 count: 1
                 rows: 1000000
                 columns:
@@ -65,81 +65,81 @@ microbenchmark:
 
         executeRules:
 
-            - workload: INDG8_1_rangetbl_range_lookup_index_scan_using_comp_skey_first_part_range
-              customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
+            - workload: INDG8_D_1_hashtbl_hash_lookup_index_scan_using_comp_skey_first_part_hash
+              customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from INDG8_hashtbl_comp_skey_1 where col_bigint_id_2=500000
+                        - query: select * from INDG8_D_hashtbl_comp_skey_1 where col_bigint_id_2=500000
 
-            - workload: INDG8_2_rangetbl_range_lookup_index_scan_using_comp_skey_sec_part_range
-              customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
+            - workload: INDG8_D_2_hashtbl_hash_lookup_index_scan_using_comp_skey_sec_part_hash
+              customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from INDG8_hashtbl_comp_skey_1 where col_bigint_id_3=500000
+                        - query: select * from INDG8_D_hashtbl_comp_skey_1 where col_bigint_id_3=500000
 
-            - workload: INDG8_3_rangetbl_range_lookup_index_scan_using_mixed_comp_skey_first_part_hash
-              customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
+            - workload: INDG8_D_3_hashtbl_hash_lookup_index_scan_using_mixed_comp_skey_first_part_hash
+              customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from INDG8_hashtbl_comp_skey_1 where col_bigint_id_4=500000
+                        - query: select * from INDG8_D_hashtbl_comp_skey_1 where col_bigint_id_4=500000
 
-            - workload: INDG8_4_rangetbl_range_lookup_index_scan_using_mixed_comp_skey_sec_part_range
-              customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
+            - workload: INDG8_D_4_hashtbl_hash_lookup_index_scan_using_mixed_comp_skey_sec_part_hash
+              customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from INDG8_hashtbl_comp_skey_1 where col_bigint_id_5=500000
+                        - query: select * from INDG8_D_hashtbl_comp_skey_1 where col_bigint_id_5=500000
 
-            - workload: INDG8_1_rangetbl_range_lookup_index_scan_using_comp_skey_first_part_range
-              customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
+            - workload: INDG8_D_1_hashtbl_hash_lookup_index_scan_using_comp_skey_first_part_hash
+              customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from INDG8_hashtbl_comp_skey_1 where col_bigint_id_2 IN (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+                        - query: select * from INDG8_D_hashtbl_comp_skey_1 where col_bigint_id_2 IN (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
                           bindings:
                               count: 100
                               util: RandomNumber
                               params: [ 1, 1000000 ]
 
-            - workload: INDG8_2_rangetbl_range_lookup_index_scan_using_comp_skey_sec_part_range
-              customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
+            - workload: INDG8_D_2_hashtbl_hash_lookup_index_scan_using_comp_skey_sec_part_hash
+              customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from INDG8_hashtbl_comp_skey_1 where col_bigint_id_3 IN (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+                        - query: select * from INDG8_D_hashtbl_comp_skey_1 where col_bigint_id_3 IN (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
                           bindings:
                               count: 100
                               util: RandomNumber
                               params: [ 1, 1000000 ]
 
-            - workload: INDG8_3_rangetbl_range_lookup_index_scan_using_mixed_comp_skey_first_part_hash
-              customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
+            - workload: INDG8_D_3_hashtbl_hash_lookup_index_scan_using_mixed_comp_skey_first_part_hash
+              customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from INDG8_hashtbl_comp_skey_1 where col_bigint_id_4 IN (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+                        - query: select * from INDG8_D_hashtbl_comp_skey_1 where col_bigint_id_4 IN (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
                           bindings:
                               count: 100
                               util: RandomNumber
                               params: [ 1, 1000000 ]
 
-            - workload: INDG8_4_rangetbl_range_lookup_index_scan_using_mixed_comp_skey_sec_part_range
-              customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
+            - workload: INDG8_D_4_hashtbl_hash_lookup_index_scan_using_mixed_comp_skey_sec_part_hash
+              customTags: schematype=regular,partition=hash,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
               run:
                   - name: hashtbl_index_scan_using_sec_index
                     weight: 100
                     queries:
-                        - query: select * from INDG8_hashtbl_comp_skey_1 where col_bigint_id_5 IN (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+                        - query: select * from INDG8_D_hashtbl_comp_skey_1 where col_bigint_id_5 IN (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
                           bindings:
                               count: 100
                               util: RandomNumber
