- variant of retention workload with 1M rows

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,7 +13,7 @@ log4j.logger.com.oltpbenchmark.ThreadBench=INFO
 log4j.logger.com.oltpbenchmark.DistributionStatistics=INFO
 log4j.logger.com.oltpbenchmark.api.BenchmarkModule=INFO
 log4j.logger.com.oltpbenchmark.api.Loader=INFO
-log4j.logger.com.oltpbenchmark.api.Worker=DEBUG
+log4j.logger.com.oltpbenchmark.api.Worker=INFO
 log4j.logger.com.oltpbenchmark.api.Procedure=INFO
 log4j.logger.com.oltpbenchmark.catalog.Catalog=INFO
 log4j.logger.com.oltpbenchmark.util.ThreadUtil=INFO
