--- a/config/yugabyte/sample_featurebench_config.yaml
+++ b/config/yugabyte/sample_featurebench_config.yaml
@@ -1,19 +1,20 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://172.151.21.180:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
-password: null
+password: Password@321
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
+optimalThreads: true
 collect_pg_stat_statements: true
-terminals: 1
+terminals: 10
 works:
     work:
-        time_secs: 5
+        time_secs: 300
         active_terminals: 1
         rate: 1000
-        warmup: 0
+        warmup: 30
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
@@ -23,10 +24,10 @@ microbenchmark:
         - CREATE TABLE demo100col (id INT, col1 TEXT, primary key (id ASC)) ;
         loadRules:
         -   table: demo100col
-            rows: 10
+            rows: 1000
             columns:
             -   name: id
-                util: PrimaryIntGen
+                util: RandomUniqueIntGen
                 params:
                 - 1
                 - 1000
@@ -42,7 +43,7 @@ microbenchmark:
                 queries:
                 -   query: INSERT INTO demo100col VALUES(?,?)
                     bindings:
-                    -   util: PrimaryIntGen
+                    -   util: RandomUniqueIntGen
                         params:
                         - 10000
                         - 100000
