--- a/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING1_join_on_hash_partitioned_tbl.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING1_join_on_hash_partitioned_tbl.yaml
@@ -4,6 +4,8 @@ url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationNam
 username: {{username}}
 password: {{password}}
 batchsize: 128
+optimalThreads: true
+maxThreads: 50
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
 terminals: 1
