--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
                 <dependency>
                     <groupId>com.yugabyte</groupId>
                     <artifactId>jdbc-yugabytedb</artifactId>
-                    <version>42.3.4</version>
+                    <version>42.7.3-yb-4</version>
                 </dependency>
                 <dependency>
                     <groupId>org.postgresql</groupId>
