--- a/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING1_join_on_hash_partitioned_tbl.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING1_join_on_hash_partitioned_tbl.yaml
@@ -1,6 +1,6 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=true
 username: {{username}}
 password: {{password}}
 batchsize: 128
