--- a/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING1_join_on_hash_partitioned_tbl.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING1_join_on_hash_partitioned_tbl.yaml
@@ -5,7 +5,8 @@ username: {{username}}
 password: {{password}}
 batchsize: 128
 optimalThreads: true
-maxThreads: 50
+maxThreads: 100
+minThreads: 35
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
 terminals: 1
