--- a/config/yugabyte/regression_pipelines/miscellaneous/yugabyte/retention_impact_6.yaml
+++ b/config/yugabyte/regression_pipelines/miscellaneous/yugabyte/retention_impact_6.yaml
@@ -102,7 +102,7 @@ microbenchmark:
 
         executeRules:
             - workload: Retention_pre_workload_run1
-              time_secs: 600
+              time_secs: 300
               run:
                   - name: NetG1_1_select_query
                     weight: 100
@@ -119,57 +119,57 @@ microbenchmark:
                               params: [ 31, 40 ]
                             - util: RandomInt
                               params: [ 41, 50 ]
-            # - workload: Retention_mixed_workload_run2
-            #   time_secs: 3600
-            #   run:
-            #       - name: NetG1_1_update_query
-            #         weight: 50
-            #         queries:
-            #             - query: UPDATE nets_1 SET shard_id_1 = shard_id_1 + 1 WHERE db_user_id_1 = ? and shard_id_1 = ?
-            #               bindings:
-            #                 - util: HashedRandomString
-            #                   params: [ 1, 500, 10]
-            #                 - util: RandomInt
-            #                   params: [ 21, 50 ]
-            #       - name: NetG1_2_delete_query
-            #         weight: 10
-            #         queries:
-            #             - query: delete from nets_1 where db_user_id_1 = ? and shard_id_1 = ?
-            #               bindings:
-            #                 - util: HashedRandomString
-            #                   params: [ 1, 150 , 10]
-            #                 - util: RandomInt
-            #                   params: [ 1, 20 ]
-            #       - name: NetG1_3_scan_query_pointselect
-            #         weight: 40
-            #         queries:
-            #             - query: select work_id_1,owner_1,state_1,sequence_id_1 from nets_1 where db_user_id_1 = ? and shard_id_1 = ANY(ARRAY[?,?,?,?])
-            #               bindings:
-            #                 - util: HashedRandomString
-            #                   params: [ 1, 500, 10]
-            #                 - util: RandomInt
-            #                   params: [ 1, 20 ]
-            #                 - util: RandomInt
-            #                   params: [ 21, 30 ]
-            #                 - util: RandomInt
-            #                   params: [ 31, 40 ]
-            #                 - util: RandomInt
-            #                   params: [ 41, 50 ]
-            # - workload: Retention_post_workload_run3
-            #   time_secs: 300
-            #   run:
-            #       - name: NetG1_1_select_query
-            #         weight: 100
-            #         queries:
-            #             - query: select work_id_1,owner_1,state_1,sequence_id_1 from nets_1 where db_user_id_1 = ? and shard_id_1 = ANY(ARRAY[?,?,?,?])
-            #               bindings:
-            #                 - util: HashedRandomString
-            #                   params: [ 1, 500, 10]
-            #                 - util: RandomInt
-            #                   params: [ 1, 20 ]
-            #                 - util: RandomInt
-            #                   params: [ 21, 30 ]
-            #                 - util: RandomInt
-            #                   params: [ 31, 40 ]
-            #                 - util: RandomInt
-            #                   params: [ 41, 50 ]
+            - workload: Retention_mixed_workload_run2
+              time_secs: 3600
+              run:
+                  - name: NetG1_1_update_query
+                    weight: 50
+                    queries:
+                        - query: UPDATE nets_1 SET shard_id_1 = shard_id_1 + 1 WHERE db_user_id_1 = ? and shard_id_1 = ?
+                          bindings:
+                            - util: HashedRandomString
+                              params: [ 1, 500, 10]
+                            - util: RandomInt
+                              params: [ 21, 50 ]
+                  - name: NetG1_2_delete_query
+                    weight: 10
+                    queries:
+                        - query: delete from nets_1 where db_user_id_1 = ? and shard_id_1 = ?
+                          bindings:
+                            - util: HashedRandomString
+                              params: [ 1, 150 , 10]
+                            - util: RandomInt
+                              params: [ 1, 20 ]
+                  - name: NetG1_3_scan_query_pointselect
+                    weight: 40
+                    queries:
+                        - query: select work_id_1,owner_1,state_1,sequence_id_1 from nets_1 where db_user_id_1 = ? and shard_id_1 = ANY(ARRAY[?,?,?,?])
+                          bindings:
+                            - util: HashedRandomString
+                              params: [ 1, 500, 10]
+                            - util: RandomInt
+                              params: [ 1, 20 ]
+                            - util: RandomInt
+                              params: [ 21, 30 ]
+                            - util: RandomInt
+                              params: [ 31, 40 ]
+                            - util: RandomInt
+                              params: [ 41, 50 ]
+            - workload: Retention_post_workload_run3
+              time_secs: 300
+              run:
+                  - name: NetG1_1_select_query
+                    weight: 100
+                    queries:
+                        - query: select work_id_1,owner_1,state_1,sequence_id_1 from nets_1 where db_user_id_1 = ? and shard_id_1 = ANY(ARRAY[?,?,?,?])
+                          bindings:
+                            - util: HashedRandomString
+                              params: [ 1, 500, 10]
+                            - util: RandomInt
+                              params: [ 1, 20 ]
+                            - util: RandomInt
+                              params: [ 21, 30 ]
+                            - util: RandomInt
+                              params: [ 31, 40 ]
+                            - util: RandomInt
+                              params: [ 41, 50 ]
