--- a/config/yugabyte/regression_pipelines/miscellaneous/yugabyte/retention_impact_11.yaml
+++ b/config/yugabyte/regression_pipelines/miscellaneous/yugabyte/retention_impact_11.yaml
@@ -156,11 +156,11 @@ microbenchmark:
                       params: [ 1, 50 ]
                     - name: db_user_id_
                       count: 1
-                      util: CyclicSeqIntGen
-                      params: [ 1, 200000 ]
+                      util: SeqIntGenWithInterval
+                      params: [ 1, 500, 50 ]
                     - name: shard_id_
                       count: 1
-                      util: RandomNumber
+                      util: CyclicSeqIntGen
                       params: [ 1, 50 ]
                     - name: ingest_time_
                       count: 1
@@ -203,7 +203,7 @@ microbenchmark:
                         - query: select work_id_1,owner_1,state_1,sequence_id_1 from nets_2 where db_user_id_1 = ? and shard_id_1 = ANY(ARRAY[?,?,?,?])
                           bindings:
                             - util: RandomInt
-                              params: [ 1, 200000 ]
+                              params: [ 1, 500 ]
                             - util: RandomInt
                               params: [ 1, 20 ]
                             - util: RandomInt
