--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG12_sec_index_hash_tbl_data_cardinality_bigint.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG12_sec_index_hash_tbl_data_cardinality_bigint.yaml
@@ -47,7 +47,7 @@ microbenchmark:
                       params: [ 1000001, 1001000 ]
                     - name: col_bigint_id_
                       count: 3
-                      util: PrimaryIntGen
+                      util: RandomUniqueIntGen
                       params: [ 1, 1000000 ]
                     - name: col_float2_
                       count: 2
