--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG2_pkey_point_selects_range_table_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG2_pkey_point_selects_range_table_indexscan.yaml
@@ -36,7 +36,7 @@ microbenchmark:
                 columns:
                     - name: col_bigint_id_
                       count: 4
-                      util: PrimaryIntGen
+                      util: RandomUniqueIntGen
                       params: [ 1, 1000000 ]
                     - name: col_bigint_
                       count: 2
