--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG3_pkey_hash_tbl_range_selects_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG3_pkey_hash_tbl_range_selects_indexscan.yaml
@@ -35,7 +35,7 @@ microbenchmark:
                 columns:
                     - name: col_bigint_id_
                       count: 4
-                      util: PrimaryIntGen
+                      util: RandomUniqueIntGen
                       params: [ 1, 1000000 ]
                     - name: col_bigint_
                       count: 2
