--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG1_hash_pointlookup_primarykey_vs_index.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG1_hash_pointlookup_primarykey_vs_index.yaml
@@ -42,7 +42,7 @@ microbenchmark:
               columns:
                   - name: col_bigint_id_
                     count: 1
-                    util: PrimaryIntGen
+                    util: RandomUniqueIntGen
                     params: [1, 1000000]
                   - name: col_bigint_
                     count: 5
@@ -77,7 +77,7 @@ microbenchmark:
               columns:
                   - name: col_bigint_id_
                     count: 1
-                    util: PrimaryIntGen
+                    util: RandomUniqueIntGen
                     params: [1, 1000000]
                   - name: col_bigint_
                     count: 5
