--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG5_pkey_hash_pointLookup_increasingColumn.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG5_pkey_hash_pointLookup_increasingColumn.yaml
@@ -46,7 +46,7 @@ microbenchmark:
               columns:
                   - name: col_bigint_id_
                     count: 1
-                    util: PrimaryIntGen
+                    util: RandomUniqueIntGen
                     params: [1, 1000000]
             - table: pkey_hash_pointLookup_10column_
               count: 1
@@ -54,7 +54,7 @@ microbenchmark:
               columns:
                   - name: col_bigint_id_
                     count: 1
-                    util: PrimaryIntGen
+                    util: RandomUniqueIntGen
                     params: [1, 1000000]
                   - name: col_bigint_
                     count: 9
@@ -66,7 +66,7 @@ microbenchmark:
               columns:
                   - name: col_bigint_id_
                     count: 1
-                    util: PrimaryIntGen
+                    util: RandomUniqueIntGen
                     params: [1, 1000000]
                   - name: col_bigint_
                     count: 99
