--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG6_pkey_rangescan_halfTableScan_increasingColumn.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG6_pkey_rangescan_halfTableScan_increasingColumn.yaml
@@ -45,7 +45,7 @@ microbenchmark:
               columns:
                   - name: col_bigint_id_
                     count: 1
-                    util: PrimaryIntGen
+                    util: RandomUniqueIntGen
                     params: [1, 1000000]
             - table: pkey_rangescan_halfTable_10column_
               count: 1
@@ -53,11 +53,11 @@ microbenchmark:
               columns:
                   - name: col_bigint_id_
                     count: 1
-                    util: PrimaryIntGen
+                    util: RandomUniqueIntGen
                     params: [1, 1000000]
                   - name: col_bigint_
                     count: 9
-                    util: RandomNumber
+                    util: RandomUniqueIntGen
                     params: [1, 1000000]
             - table: pkey_rangescan_halfTable_100column_
               count: 1
